# knowledge-graph-creator

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker_compose.yaml  env.temp  pyproject.toml
docs/: CITATION_NETWORK_INTEGRATION.md  README.md
experiments/: README.md  anthropic annotator.ipynb  build_academic_graph.ipynb  bullid_academic_graph_from_api.ipynb  experiment1.ipynb  expract_pdf.ipynb  grop_llm.ipynb  relation_extraction.ipynb  sematic_scholar.ipynb
knowledge_graph_creator/: academic_graph_builder.py  cli.py  evaluator.py  main.py  orchestrator.py  patterns.py  relation_types.json  semantic_scholar_client.py  settings.py  utils.py
knowledge_graph_creator/db_neo4j/: academic_graph.py
knowledge_graph_creator/doc_extractor/: base.py  pdf_extractor.py
knowledge_graph_creator/evaluation/: automatic_evaluation.py
knowledge_graph_creator/extractors/: base.py  paper_relation_extractor.py  reference_details.py  reference_extractor.py
knowledge_graph_creator/llm/: __init__.py  llm_inference.py  prompts.py  schema.py
knowledge_graph_creator/logging/: logging.py
tests/: test_core.py
