[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "knowledge_graph_creator"
version = "0.1.0"
description = "A package and experiment repo for knowledge graph creation research."
authors = ["Akash Sujith <your-email@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
tqdm = "*"
numpy = "*"
pandas = "*"
pymupdf = "^1.26.4"
pymupdf4llm = "^0.0.27"
neo4j = "^5.28.2"
python-dotenv = "^1.2.1"
loguru = "^0.7.3"
logging = "^0.4.9.6"
groq = "^0.36.0"
networkx = "^3.6"
matplotlib = "^3.10.7"
pyvis = "^0.3.2"
scipy = "^1.16.3"

[tool.poetry.group.dev.dependencies]
ipython = "^9.5.0"
jupyter = "^1.1.1"
pytest = "*"
black = "*"
isort = "*"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"

# Optional: Add scripts, extras, etc. here
